ejercicio de imagenes

--- a/Ejercicio-2.html
+++ b/Ejercicio-2.html
@@ -10,5 +10,8 @@
   			<p align="center">Así, por ejemplo, cambiendo el atributo, podemos alinear el texto al centro</p>
   			<p><i> De esta manera podemos dar <u>formato</u> al texto que deseemos</i></p>
   			<p><font color="red">Esto queda en otro color</font></p>
-    	</body>
+  			<img src="imagenes/images.jpg" alt="la imagen solo es una prueba">
+  			<img src="imagenes/image.png" alt="Es una segunda prueba">
+
+  	</body>
 </html>
